fix history page on mobile, interest-protected styling

--- a/wp-content/themes/fourpoint/assets/stylesheets/sass/components/_general-page.scss
+++ b/wp-content/themes/fourpoint/assets/stylesheets/sass/components/_general-page.scss
@@ -112,7 +112,7 @@
 	width: 100%;
 	margin: 36px 0 50px;
 	min-height: 215px;
-	@media screen and (min-width: 700px) {
+	@include tablet-portrait-and-up {
 		width: 49%;
 	}
 	&:nth-child(even) {
@@ -140,6 +140,21 @@
 }
 
 .opp-contact {
+	&:nth-child(even) {
+		position: relative;
+		&:after {
+			@include tablet-portrait-and-up {
+				position: absolute;
+				content: ' ';
+				left: 0;
+				height: 60%;
+				width: 1px;
+				background-color: $light_gray;
+				top: 46%;
+				@include transform(translateY(-50%));
+			}
+		}
+	}
 	iframe {
 		margin: 15px auto 0;
 		display: block;
@@ -149,6 +164,9 @@
 	}
 	.card {
 		width: 90%;
+		@include tablet-portrait-and-up {
+			margin: 150px auto 0;
+		}
 		.button {
 			color: $white;
 			&:hover {
